1. DistWorkerSplitBalancer supports mutation-load based splitting strategy 2. Don't include DistWorkerSplitBalancer by default, user can enable it by add corresponding entry in standalone.yml